subiendo Desafio+SEO

--- a/Pages/doctoraTatiana.html
+++ b/Pages/doctoraTatiana.html
@@ -29,7 +29,7 @@
             <div class="contenedorLogo row">
                 <h1> Doctora Tatiana C Duran</h1>
                 <a href="../index.html" class="logoInicio">
-                    <img src="../img/LogoDienteTatianaNegro.png" alt="imagen del logo de la doctora Tatiana"
+                    <img src="../img/DentisiticaRosado.svg" alt="imagen del logo de la doctora Tatiana"
                         class="col-4">
                 </a>
             </div>
@@ -129,7 +129,7 @@
         <footer>
 
             <div class="logoFooter">
-                <img src="../img/LogoTatianaDuran.png" alt="Logo de la doctora">
+                <img src="../img/logoNombre.svg" alt="Logo de la doctora">
             </div>
 
             <div class="logoEmail">
