--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="contenedorLogo row">
                 <h1> Doctora Tatiana C Duran</h1>
                 <a href="index.html" class="logoInicio">
-                    <img src="img/LogoDienteTatianaNegro.png" alt="imagen del logo de la doctora Tatiana" class="col-4">
+                    <img src="img/DentisiticaRosado.svg" alt="imagen del logo de la doctora Tatiana" class="col-4">
                 </a>
             </div>
             <nav class="navbar navbar-expand-md">
@@ -69,12 +69,12 @@
 
             <div class="parrafo1-inicio">
                 <h2 class="sub1">Dra.Tatiana C Durán</h2>
-                <p class="parrafo1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis maxime molestias vel accusamus fugit dolorem veniam. Tempora, nostrum vel eius fuga eligendi, nesciunt ipsum est aliquid eum sequi aperiam dolorem?</p>
+                <p class="parrafo1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus similique ducimus ea quidem minima blanditiis quisquam quos, quo magnam mollitia repellendus quis veritatis assumenda. Quia quam in consequuntur voluptatum vero sint eum, reiciendis autem eligendi deserunt consectetur? Totam earum consectetur dolor veritatis magnam ea, dolorem voluptatem corporis omnis modi at animi odio, sit nulla obcaecati possimus? Ullam aliquam suscipit a, accusantium nam obcaecati excepturi nemo libero incidunt, fugiat iusto error.</p>
             </div>
             
             <div class="parrafo2-inicio">
                 <h2 class="sub2">El arte de la estetica dental</h2>
-                <p class="parrafo2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint aspernatur pariatur amet, eaque dignissimos dolore nostrum aliquam, deserunt, delectus mollitia nihil sapiente quibusdam sed magni necessitatibus possimus doloremque ducimus ullam.</p>
+                <p class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut sunt cumque minus hic, consequatur iusto vitae laudantium quasi et esse voluptatem fuga blanditiis molestias corporis recusandae aliquam culpa quod. Aperiam praesentium doloremque quibusdam expedita ratione adipisci sit blanditiis recusandae porro distinctio totam quis minus rerum minima odio, quasi maiores iure. Praesentium esse facere eligendi. Eaque perspiciatis ratione voluptatem a similique.</p>
             </div>
 
             <button class="button">Agenda Tu Cita!</button>
@@ -84,11 +84,11 @@
         <footer>
             
             <div class="logoFooter">
-                <img src="img/LogoTatianaDuran.png" alt="Logo de la doctora">
+                <img src="img/logoNombre.svg" alt="Logo de la doctora">
             </div>
 
             <div class="logoEmail">
-                <h3>Atencion al cliente</h3>
+                <h3>Atención al cliente</h3>
                 <img src="img/email.png" alt="Logo de la doctora">
             </div>
 
