--- a/Pages/galeria.html
+++ b/Pages/galeria.html
@@ -25,7 +25,7 @@
             <div class="contenedorLogo row">
                 <h1> Doctora Tatiana C Duran</h1>
                 <a href="../index.html" class="logoInicio">
-                    <img src="../img/LogoDienteTatianaNegro.png" alt="imagen del logo de la doctora Tatiana" class="col-4">
+                    <img src="../img/DentisiticaRosado.svg" alt="imagen del logo de la doctora Tatiana" class="col-4">
                 </a>
             </div>
             <nav class="navbar navbar-expand-lg">
@@ -84,7 +84,7 @@
 
         <footer>
             <div class="logoFooter">
-                <img src="../img/LogoTatianaDuran.png" alt="Logo de la doctora">
+                <img src="../img/logoNombre.svg" alt="Logo de la doctora">
             </div>
 
             <div class="logoEmail">
