Subiendo Sass y SEO

--- a/Pages/galeria.html
+++ b/Pages/galeria.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- descripcion y keywords -->
+    <meta name="description" content="Dentistica es un centro de salud dental, enfocado en la atencion al cliente, la responsabilidad y la calidad en los tratamientos; fundado por la doctora Tatiana Castro Duran como un clinica dental enfocada en la estetica cuyo objetivo y mision es garantizar la buena atencion al cliente y dar el mayor compromiso posible para que el cliente quede satisfecho con su sonrisa.">
+    <meta name="keywords" content="Dentistica, Doctora Tatiana C Duran,  Doctora Tatiana Castro, Doctora Tatiana Castro Duran, Diseño de sonrisa, Odontología estética, Odontología de calidad, Dentistica by Tatiana C Duran, Diseños de sonrisa, Odontología con buenos precios, buenos precios, financiamiento, pague a cuotas">
     <!-- link de bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
