subiendo proyecto final de coder

--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -68,9 +68,9 @@
     <main class="container-fluid">
 
         <h2 class="tituloContacto">contacto</h2>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
                     <div class="well well-sm">
                         <form class="form-horizontal" method="post">
                             <fieldset>
@@ -79,7 +79,7 @@
                                 <div class="form-group">
                                     <span class="col-md-1 col-md-offset-2 text-center"><i
                                             class="fa fa-user bigicon"></i></span>
-                                    <div class="col-md-8">
+                                    <div class="col-md-12">
                                         <input id="fname" name="name" type="text" placeholder="Nombre"
                                             class="form-control">
                                     </div>
@@ -87,7 +87,7 @@
                                 <div class="form-group">
                                     <span class="col-md-1 col-md-offset-2 text-center"><i
                                             class="fa fa-user bigicon"></i></span>
-                                    <div class="col-md-8">
+                                    <div class="col-md-12">
                                         <input id="lname" name="name" type="text" placeholder="Apellidos"
                                             class="form-control">
                                     </div>
@@ -96,7 +96,7 @@
                                 <div class="form-group">
                                     <span class="col-md-1 col-md-offset-2 text-center"><i
                                             class="fa fa-envelope-o bigicon"></i></span>
-                                    <div class="col-md-8">
+                                    <div class="col-md-12">
                                         <input id="email" name="email" type="text" placeholder="Correo Electrónico"
                                             class="form-control">
                                     </div>
@@ -105,7 +105,7 @@
                                 <div class="form-group">
                                     <span class="col-md-1 col-md-offset-2 text-center"><i
                                             class="fa fa-phone-square bigicon"></i></span>
-                                    <div class="col-md-8">
+                                    <div class="col-md-12">
                                         <input id="phone" name="phone" type="text" placeholder="Celular"
                                             class="form-control">
                                     </div>
@@ -114,7 +114,7 @@
                                 <div class="form-group">
                                     <span class="col-md-1 col-md-offset-2 text-center"><i
                                             class="fa fa-pencil-square-o bigicon"></i></span>
-                                    <div class="col-md-8">
+                                    <div class="col-md-12">
                                         <textarea class="form-control" id="message" name="message"
                                             placeholder="Ingrese su mensaje para nosotros aquí." rows="7"></textarea>
                                     </div>
@@ -129,38 +129,54 @@
                         </form>
                     </div>
                 </div>
+                <div class="col-lg-6">
+                    <div class="mapaGoogle col-md-12">
+                        <div class="tituloMap">Ubícanos acá</div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d497.0289674907679!2d-74.045002!3d4.729764!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9392d6b39592c5c7!2sJM%20Security%20LTDA!5e0!3m2!1ses!2sco!4v1661816460746!5m2!1ses!2sco" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>    
             </div>
         </div>
 
     </main>
 
     <footer>
-
         <div class="logoFooter">
+            <a href="../index.html">
             <img src="../img/logoNombre.svg" alt="Logo de la doctora">
+            </a>
         </div>
 
         <div class="logoEmail">
-            <h3>Atencion al cliente</h3>
-            <img src="../img/email.png" alt="Logo de la doctora">
+            <h3>Atención al cliente</h3>
+            <a href="mailto:taticduran@gmail.com?subject=Atencion%20al%20Cliente%20Dentistica">
+                <img src="../img/email.png" alt="Logo del email">
+            </a>
         </div>
 
         <div class="logoRedes1">
-            <img src="../img/instagram.png" alt="Logo de la doctora">
+            <a href="https://www.instagram.com/taticduran/">
+            <img src="../img/instagram.png" alt="Logo de la instagram">
+            </a>
         </div>
 
         <div class="logoRedes2">
-            <img src="../img/facebook.png" alt="Logo de la doctora">
+            <a href="https://www.facebook.com/taticduran">
+            <img src="../img/facebook.png" alt="Logo de la facebook">
+            </a>
         </div>
 
         <div class="logoRedes3">
-            <img src="../img/linkedin.png" alt="Logo de la doctora">
+            <a href="https://co.linkedin.com">
+            <img src="../img/linkedin.png" alt="Logo de la linkedin">
+            </a>
         </div>
 
         <div class="logoRedes4">
-            <img src="../img/whatsapp.png" alt="Logo de la doctora">
+            <a href="https://wa.me/573044196719?text=Hola+Doctora%2C+estoy+interesad%40+en+sus+servicios.">
+            <img src="../img/whatsapp.png" alt="Logo de la whatsapp">
+            </a>
         </div>
-
     </footer>
 
 
