--- a/Pages/doctoraTatiana.html
+++ b/Pages/doctoraTatiana.html
@@ -114,48 +114,46 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-
-            <!-- <div class="imgDoc1">
-                <img src="../img/dt1.jpeg" alt="Imagen de procedimiento dental">
-            </div>
-
-            <div class="imgDoc2">
-                <img src="../img/dt2.jpeg" alt="Imagen de la doctora Tatiana examinando">
-            </div>
-
-            <div class="imgDoc3">
-                <img src="../img/dt3.jpeg" alt="Imagen de procedimiento dental 2">
-            </div> -->
-
+            
         </main>
 
         <footer>
-
             <div class="logoFooter">
+                <a href="../index.html">
                 <img src="../img/logoNombre.svg" alt="Logo de la doctora">
+                </a>
             </div>
 
             <div class="logoEmail">
-                <h3>Atencion al cliente</h3>
-                <img src="../img/email.png" alt="Logo de la doctora">
+                <h3>Atención al cliente</h3>
+                <a href="mailto:taticduran@gmail.com?subject=Atencion%20al%20Cliente%20Dentistica">
+                    <img src="../img/email.png" alt="Logo del email">
+                </a>
             </div>
 
             <div class="logoRedes1">
-                <img src="../img/instagram.png" alt="Logo de la doctora">
+                <a href="https://www.instagram.com/taticduran/">
+                <img src="../img/instagram.png" alt="Logo de la instagram">
+                </a>
             </div>
 
             <div class="logoRedes2">
-                <img src="../img/facebook.png" alt="Logo de la doctora">
+                <a href="https://www.facebook.com/taticduran">
+                <img src="../img/facebook.png" alt="Logo de la facebook">
+                </a>
             </div>
 
             <div class="logoRedes3">
-                <img src="../img/linkedin.png" alt="Logo de la doctora">
+                <a href="https://co.linkedin.com">
+                <img src="../img/linkedin.png" alt="Logo de la linkedin">
+                </a>
             </div>
 
             <div class="logoRedes4">
-                <img src="../img/whatsapp.png" alt="Logo de la doctora">
+                <a href="https://wa.me/573044196719?text=Hola+Doctora%2C+estoy+interesad%40+en+sus+servicios.">
+                <img src="../img/whatsapp.png" alt="Logo de la whatsapp">
+                </a>
             </div>
-
         </footer>
 
     </div>
