--- a/index.html
+++ b/index.html
@@ -80,35 +80,48 @@
                 <p class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut sunt cumque minus hic, consequatur iusto vitae laudantium quasi et esse voluptatem fuga blanditiis molestias corporis recusandae aliquam culpa quod. Aperiam praesentium doloremque quibusdam expedita ratione adipisci sit blanditiis recusandae porro distinctio totam quis minus rerum minima odio, quasi maiores iure. Praesentium esse facere eligendi. Eaque perspiciatis ratione voluptatem a similique.</p>
             </div>
 
-            <button class="button">Agenda Tu Cita!</button>
-
+            <button class="button">
+                <a href="Pages/contacto.html">Agenda Tu Cita!</a>
+            </button>
         </main>
 
         <footer>
             
             <div class="logoFooter">
+                <a href="index.html">
                 <img src="img/logoNombre.svg" alt="Logo de la doctora">
+                </a>
             </div>
 
             <div class="logoEmail">
                 <h3>Atención al cliente</h3>
-                <img src="img/email.png" alt="Logo de la doctora">
+                <a href="mailto:taticduran@gmail.com?subject=Atencion%20al%20Cliente%20Dentistica">
+                    <img src="img/email.png" alt="Logo del email">
+                </a>
             </div>
 
             <div class="logoRedes1">
-                <img src="img/instagram.png" alt="Logo de la doctora">
+                <a href="https://www.instagram.com/taticduran/">
+                <img src="img/instagram.png" alt="Logo de la instagram">
+                </a>
             </div>
 
             <div class="logoRedes2">
-                <img src="img/facebook.png" alt="Logo de la doctora">
+                <a href="https://www.facebook.com/taticduran">
+                <img src="img/facebook.png" alt="Logo de la facebook">
+                </a>
             </div>
 
             <div class="logoRedes3">
-                <img src="img/linkedin.png" alt="Logo de la doctora">
+                <a href="https://co.linkedin.com">
+                <img src="img/linkedin.png" alt="Logo de la linkedin">
+                </a>
             </div>
 
             <div class="logoRedes4">
-                <img src="img/whatsapp.png" alt="Logo de la doctora">
+                <a href="https://wa.me/573044196719?text=Hola+Doctora%2C+estoy+interesad%40+en+sus+servicios.">
+                <img src="img/whatsapp.png" alt="Logo de la whatsapp">
+                </a>
             </div>
             
         </footer>
